[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/BallHit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sfx/Countdown.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/racchetta_rossa.png" type="Texture" id=4]
[ext_resource path="res://Assets/campo.png" type="Texture" id=5]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/WorldController.gd" type="Script" id=7]
[ext_resource path="res://Animations/buttons.tres" type="StyleBox" id=8]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 640 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 368, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 368, 96 )

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI/UI/Score:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 24 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "zoomScore"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("UI/UI/Score:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 24 ), Vector2( 0, 64 ), Vector2( 0, 24 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "Racchetta"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.00001, -31.5 ), Vector2( -4, -35.469 ), Vector2( -4, -31.5 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 352.5, 90.25 )

[sub_resource type="DynamicFont" id=10]
size = 250
outline_size = 5
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=18]
size = 150
outline_size = 5
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=20]
resource_name = "ButtonMove"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Restart:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 416 ), Vector2( 24, 386 ), Vector2( 24, 416 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 696 ), Vector2( 24, 666 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Restart:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 416 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 696 ) ]
}

[sub_resource type="DynamicFont" id=22]
size = 250
outline_size = 5
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=26]
size = 150
outline_size = 5
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
use_filter = true
font_data = ExtResource( 6 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )

[node name="Enviroment" type="Node" parent="."]

[node name="RightWall" type="StaticBody2D" parent="Enviroment"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/RightWall"]
position = Vector2( -24, 640 )
shape = SubResource( 2 )

[node name="LeftWall" type="StaticBody2D" parent="Enviroment"]
position = Vector2( 720, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/LeftWall"]
position = Vector2( 24, 640 )
shape = SubResource( 2 )

[node name="Roof" type="StaticBody2D" parent="Enviroment"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/Roof"]
position = Vector2( 368, 224 )
shape = SubResource( 3 )

[node name="Floor" type="StaticBody2D" parent="Enviroment"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/Floor"]
position = Vector2( 360, 1184 )
shape = SubResource( 4 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 359, 1036 )
scale = Vector2( 2, 2 )
z_index = 4
script = ExtResource( 3 )

[node name="Particles2D" parent="Player" instance=ExtResource( 1 )]
position = Vector2( -19.5, -14 )
rotation = 4.71239
z_index = 3
lifetime = 0.1
speed_scale = 2.17
explosiveness = 0.2
randomness = 0.03

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
position = Vector2( -4, -11.656 )
rotation = 1.5708
scale = Vector2( 1.02879, 1 )
polygon = PoolVector2Array( 7.44186, 41, -0.999847, 38, -2.99988, 35, -4.99988, 30.5, -6.49991, 27, -7.99991, 22.5, -8.49994, 17, -8.49994, 12.5, -7.99997, 8.50003, -6.99997, 5.00003, -5.5, 0.500015, -3.5, -3.99998, -1.50003, -7.5, -0.500031, -8.5, 1.1236, -9, 7.92773, -10 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( -4.00001, -31.5 )
scale = Vector2( 0.11, 0.1 )
z_index = 1
texture = ExtResource( 4 )

[node name="OnScoreChange" type="AnimationPlayer" parent="Player"]
root_node = NodePath("../..")
anims/RESET = SubResource( 24 )
anims/zoomScore = SubResource( 23 )

[node name="Racchetta" type="AnimationPlayer" parent="Player"]
anims/ScenesRacchetta = SubResource( 25 )

[node name="Area2D" type="Area2D" parent="Player" groups=["Points"]]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Player/Area2D"]
position = Vector2( -3.35851, -12.3482 )
rotation = 1.5708
scale = Vector2( 1.05398, 1.04139 )
polygon = PoolVector2Array( 3.00015, 40.5, -0.999847, 38, -2.99988, 35, -4.99988, 30.5, -6.49991, 27, -7.99991, 22.5, -8.49994, 17, -8.49994, 12.5, -7.99997, 8.50003, -6.99997, 5.00003, -5.5, 0.500015, -3.5, -3.99998, -1.50003, -7.5, -0.144073, -8.02634, 2.22787, -7.54622, 2.22787, -7.54622 )

[node name="LoseArea" type="Area2D" parent="." groups=["LoseArea"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseArea"]
position = Vector2( 359.5, 1170.25 )
shape = SubResource( 8 )

[node name="CollisionShape2D2" type="CollisionPolygon2D" parent="LoseArea"]
position = Vector2( -148, 615 )
polygon = PoolVector2Array( -1732, -1247, 2612, -1231, 2644, -1991, -1716, -1847 )

[node name="CollisionShape2D5" type="CollisionPolygon2D" parent="LoseArea"]
position = Vector2( 32, 4128 )
polygon = PoolVector2Array( -1732, -1247, 2612, -1231, 2644, -1991, -1716, -1847 )

[node name="CollisionShape2D3" type="CollisionPolygon2D" parent="LoseArea"]
position = Vector2( 296, 1256 )
rotation = -1.65879
polygon = PoolVector2Array( -1732, -1247, 2612, -1231, 2644, -1991, -1716, -1847 )

[node name="CollisionShape2D4" type="CollisionPolygon2D" parent="LoseArea"]
position = Vector2( 616, 440 )
rotation = -4.73575
polygon = PoolVector2Array( -1732, -1247, 2612, -1231, 2644, -1991, -1716, -1847 )

[node name="Bg" type="CanvasLayer" parent="."]
layer = -5

[node name="Campo" type="Sprite" parent="Bg"]
position = Vector2( 360, 640 )
z_index = -15
texture = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -3

[node name="UI" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="Label" parent="UI/UI"]
anchor_top = 0.019
anchor_right = 1.0
anchor_bottom = 0.212
margin_top = -0.320002
margin_bottom = 0.640015
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1

[node name="Restart" type="Button" parent="UI/UI"]
visible = false
margin_left = 24.0
margin_top = 416.0
margin_right = 704.0
margin_bottom = 647.999
custom_fonts/font = SubResource( 18 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "Restart"
flat = true

[node name="Anim" type="AnimationPlayer" parent="UI/UI"]
anims/ButtonMove = SubResource( 20 )
anims/RESET = SubResource( 21 )

[node name="Coutdown" type="Label" parent="UI/UI"]
margin_top = 304.0
margin_right = 712.0
margin_bottom = 832.0
custom_fonts/font = SubResource( 22 )
text = "4"
align = 1
valign = 1

[node name="Menu" type="Button" parent="UI/UI"]
visible = false
margin_left = 24.0
margin_top = 696.0
margin_right = 704.0
margin_bottom = 834.0
custom_fonts/font = SubResource( 26 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "Menu"
flat = true

[node name="SpawnBallPos" type="Position2D" parent="."]
position = Vector2( 360, 264 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="CountdownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="CoutDownSFX" type="Timer" parent="."]

[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_Area2D_body_entered"]
[connection signal="pressed" from="UI/UI/Restart" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="UI/UI/Menu" to="." method="_on_Menu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CoutDownSFX" to="." method="_on_CoutDownSFX_timeout"]
